--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <title>Start</title>
     </head>
-    <body>
+    <body style="background-color: black">
         <div class="frame-wrap">
             <main class="frame" aria-label="Game Start Page">
                 <h1 class="welcome">Welcome to CodeHacker</h1>
@@ -39,10 +39,7 @@
                     </h2>
                     <ul class="how-list">
                         <li>The game generates a random 7-digit code.</li>
-                        <li>
-                            Players work together and take turns entering
-                            guesses.
-                        </li>
+                        <li>You enter guesses to try and crack the code</li>
                         <li>
                             After each guess, you’ll see how many digits are in
                             the correct position.
@@ -59,5 +56,6 @@
                 </section>
             </main>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
