--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                         id="username"
                         class="name-input"
                         type="text"
-                        placeholder="e.g., Alex"
+                        placeholder="ex. Amy Pan Sarvaiya"
                         maxlength="20"
                         autocomplete="nickname"
                         aria-label="Enter your name"
@@ -38,7 +38,7 @@
                         <span>How to Play?</span>
                     </h2>
                     <ul class="how-list">
-                        <li>The game generates a random 7-digit code.</li>
+                        <li>The game generates a random 5-digit code.</li>
                         <li>You enter guesses to try and crack the code</li>
                         <li>
                             After each guess, you’ll see how many digits are in
